--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -56,7 +56,11 @@
     mode: "{{ item.mode | default('0755') }}"
     state: "{{ item.state | default('directory') }}"
   loop:
+    - { dest: "/etc/containers" }
+    - { dest: "/etc/containers/certs.d" }
+    - { dest: "/etc/containers/oci/hooks.d" }
     - { dest: "/usr/local/bin" }
+    - { dest: "/usr/share/containers" }
     - { dest: "{{ skopeo_download.dest | dirname }}" }
   tags: skopeo
 
@@ -84,7 +88,7 @@
       && mkdir -p $GOPATH/src/github.com/containers/skopeo \
       && cd $GOPATH/src/github.com/containers/skopeo \
       && tar -zx -C . -f {{ skopeo_download.dest }} --strip-components=1 \
-      && make binary-local BUILDTAGS='' \
+      && make binary-local \
       && mv skopeo /usr/local/bin/ \
       && rm -rf $TMP_DIR
   args:
@@ -92,6 +96,22 @@
   when: get_url_result is changed
   register: result
   until: result is succeeded
+  tags: skopeo
+
+- name: copy templates
+  template:
+    dest: "{{ item.dest }}"
+    src: "{{ item.src | default('./templates' + item.dest + '.j2') }}"
+    owner: "{{ item.owner | default('root') }}"
+    group: "{{ item.group | default('root') }}"
+    mode: "{{ item.mode | default('0644') }}"
+  loop:
+    - { dest: "/etc/containers/policy.json" }
+    - { dest: "/etc/containers/registries.conf" }
+    - { dest: "/etc/containers/storage.conf" }
+    - { dest: "/usr/share/containers/containers.conf" }
+    - { dest: "/usr/share/containers/mounts.conf" }
+    - { dest: "/usr/share/containers/seccomp.json" }
   tags: skopeo
 
 - name: prepare files
@@ -102,5 +122,11 @@
     mode: "{{ item.mode | default('0644') }}"
     state: "{{ item.state | default('file') }}"
   loop:
+    - { dest: "/etc/containers/policy.json" }
+    - { dest: "/etc/containers/registries.conf" }
+    - { dest: "/etc/containers/storage.conf" }
     - { dest: "/usr/local/bin/skopeo", mode: "0755" }
+    - { dest: "/usr/share/containers/containers.conf" }
+    - { dest: "/usr/share/containers/mounts.conf" }
+    - { dest: "/usr/share/containers/seccomp.json" }
   tags: skopeo
