--- a/ansible-role-requirements.yml
+++ b/ansible-role-requirements.yml
@@ -25,3 +25,11 @@
 - name: golang
   src: https://github.com/alvistack/ansible-role-golang
   version: develop
+
+- name: runc
+  src: https://github.com/alvistack/ansible-role-runc
+  version: develop
+
+- name: conmon
+  src: https://github.com/alvistack/ansible-role-conmon
+  version: develop
