--- a/vars/suse-15.yml
+++ b/vars/suse-15.yml
@@ -15,6 +15,7 @@
 # limitations under the License.
 
 _zypper:
+  - { state: "latest", name: "bash-completion" }
   - { state: "latest", name: "device-mapper-devel" }
   - { state: "latest", name: "gpgme-devel" }
   - { state: "latest", name: "libassuan-devel" }
