--- a/vars/ubuntu-16.04.yml
+++ b/vars/ubuntu-16.04.yml
@@ -15,6 +15,7 @@
 # limitations under the License.
 
 _apt:
+  - { state: "latest", name: "bash-completion" }
   - { state: "latest", name: "btrfs-tools" }
   - { state: "latest", name: "libassuan-dev" }
   - { state: "latest", name: "libdevmapper-dev" }
