--- a/vars/ubuntu-19.10.yml
+++ b/vars/ubuntu-19.10.yml
@@ -15,6 +15,7 @@
 # limitations under the License.
 
 _apt:
+  - { state: "latest", name: "bash-completion" }
   - { state: "latest", name: "libassuan-dev" }
   - { state: "latest", name: "libbtrfs-dev" }
   - { state: "latest", name: "libdevmapper-dev" }
