--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -88,11 +88,14 @@
     set -o pipefail
     TMP_DIR="$(mktemp -d)" \
       && export GOPATH=$TMP_DIR \
+      && export PATH="$GOPATH/bin:$PATH" \
+      && cd $GOPATH \
+      && go get -u github.com/cpuguy83/go-md2man \
       && mkdir -p $GOPATH/src/github.com/containers/skopeo \
       && cd $GOPATH/src/github.com/containers/skopeo \
       && tar -zx -C . -f {{ skopeo_download.dest }} --strip-components=1 \
-      && make binary-local \
-      && make install \
+      && make binary-local PREFIX="/usr/local" \
+      && make install PREFIX="/usr/local" \
       && rm -rf $TMP_DIR
   args:
     executable: "/bin/bash"
