--- a/molecule/ubuntu-16.04/converge.yml
+++ b/molecule/ubuntu-16.04/converge.yml
@@ -17,10 +17,21 @@
 - hosts: all
   remote_user: root
   become: true
-  roles:
-    - role: python
-    - role: git
-    - role: golang
-    - role: runc
-    - role: conmon
-    - role: skopeo
+  tasks:
+    - include_role:
+        name: python
+
+    - include_role:
+        name: git
+
+    - include_role:
+        name: golang
+
+    - include_role:
+        name: runc
+
+    - include_role:
+        name: conmon
+
+    - include_role:
+        name: skopeo
