--- a/vars/centos-8.yml
+++ b/vars/centos-8.yml
@@ -14,26 +14,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-galaxy_info:
-  role_name: skopeo
-  author: "Wong Hoi Sing Edison <hswong3i@pantarei-design.com>"
-  description: Ansible Role for Skopeo Installation
-  company: PantaRei Design
-  license: Apache-2.0
-  min_ansible_version: 2.9
-  platforms:
-    - name: Ubuntu
-      versions:
-        - eoan
-        - bionic
-        - xenial
-    - name: EL
-      versions:
-        - 8
-        - 7
-    - name: opensuse
-      versions:
-        - all
-  galaxy_tags:
-    - system
-dependencies: []
+_yum:
+  - { state: "latest", name: "bash-completion" }
+  - { state: "latest", name: "device-mapper-devel", enablerepo: "PowerTools" }
+  - { state: "latest", name: "gpgme-devel", enablerepo: "PowerTools" }
+  - { state: "latest", name: "libassuan-devel", enablerepo: "PowerTools" }
+  - { state: "latest", name: "make" }
