BUILDTAGS="btrfs_noversion exclude_graphdriver_btrfs exclude_graphdriver_devicemapper"

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -89,7 +89,8 @@
       && cd $GOPATH/src/github.com/containers/skopeo \
       && tar -zx -C . -f {{ skopeo_download.dest }} --strip-components=1 \
       && export PREFIX="/usr/local" \
-      && make binary-local BUILDTAGS='btrfs_noversion exclude_graphdriver_btrfs' \
+      && export BUILDTAGS="btrfs_noversion exclude_graphdriver_btrfs exclude_graphdriver_devicemapper" \
+      && make binary-local \
       && make install-binary \
       && make install-docs \
       && make install-completions \
