--- a/vars/main.yml
+++ b/vars/main.yml
@@ -15,6 +15,10 @@
 # limitations under the License.
 
 _skopeo_download:
+  v0.2.0:
+    url: "https://github.com/containers/skopeo/archive/v0.2.0.tar.gz"
+    dest: "{{ ansible_user_dir }}/.ansible/tmp/skopeo-v0.2.0.tar.gz"
+    checksum: "sha1:a4dfc95130eefc1fc48e3fc8e1cbfb2409ed5368"
   v0.1.41:
     url: "https://github.com/containers/skopeo/archive/v0.1.41.tar.gz"
     dest: "{{ ansible_user_dir }}/.ansible/tmp/skopeo-v0.1.41.tar.gz"
