state: "{{ item.state }}"

--- a/tasks/redhat.yml
+++ b/tasks/redhat.yml
@@ -17,8 +17,8 @@
 - name: yum install
   yum:
     name: "{{ item.name }}"
+    state: "{{ item.state }}"
     enablerepo: "{{ item.enablerepo | default(None) or omit }}"
-    state: "{{ item.state | default(None) or omit }}"
   loop: "{{ _yum }}"
   register: result
   until: result is succeeded
