--- a/vars/debian-10.yml
+++ b/vars/debian-10.yml
@@ -14,29 +14,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-galaxy_info:
-  role_name: skopeo
-  author: "Wong Hoi Sing Edison <hswong3i@pantarei-design.com>"
-  description: Ansible Role for Skopeo Installation
-  company: PantaRei Design
-  license: Apache-2.0
-  min_ansible_version: 2.9
-  platforms:
-    - name: Ubuntu
-      versions:
-        - focal
-        - eoan
-        - bionic
-    - name: Debian
-      versions:
-        - buster
-    - name: EL
-      versions:
-        - 8
-        - 7
-    - name: opensuse
-      versions:
-        - 15.1
-  galaxy_tags:
-    - system
-dependencies: []
+_apt:
+  - { state: "latest", name: "bash-completion" }
+  - { state: "latest", name: "libassuan-dev" }
+  - { state: "latest", name: "libgpgme11-dev" }
+  - { state: "latest", name: "make" }
