--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -20,15 +20,20 @@
   tasks:
     - include_role:
         name: python
+      tags: python
 
     - include_role:
         name: git
+      tags: git
 
     - include_role:
         name: golang
+      tags: golang
 
     - include_role:
         name: containers_common
+      tags: containers_common
 
     - include_role:
         name: skopeo
+      tags: skopeo
