--- a/vars/main.yml
+++ b/vars/main.yml
@@ -16,10 +16,6 @@
 
 _skopeo_download:
   v1.0.0:
-    url: "https://github.com/containers/skopeo/archive/v1.0.0.tar.gz"
-    dest: "{{ ansible_user_dir }}/.ansible/tmp/skopeo-v1.0.0.tar.gz"
-    checksum: "sha1:453eb3e74cf43acaefe92790ea06d15609073cf8"
-  v0.2.0:
-    url: "https://github.com/containers/skopeo/archive/v0.2.0.tar.gz"
-    dest: "{{ ansible_user_dir }}/.ansible/tmp/skopeo-v0.2.0.tar.gz"
-    checksum: "sha1:a4dfc95130eefc1fc48e3fc8e1cbfb2409ed5368"
+    url: "https://github.com/alvistack/skopeo/releases/download/v1.0.0/skopeo-v1.0.0-linux-amd64"
+    dest: "{{ ansible_user_dir }}/.ansible/tmp/skopeo-v1.0.0-linux-amd64"
+    checksum: "sha1:030348e50452d6ed862c10baa9653ebaaf65d6ee"
