--- a/vars/main.yml
+++ b/vars/main.yml
@@ -15,6 +15,10 @@
 # limitations under the License.
 
 _skopeo_download:
+  v1.1.0:
+    url: "https://github.com/alvistack/skopeo/releases/download/v1.1.0/skopeo-v1.1.0-linux-amd64"
+    dest: "{{ ansible_user_dir }}/.ansible/tmp/skopeo-v1.1.0-linux-amd64"
+    checksum: "sha1:c2bba613a74f7487cb3fe4b858ec52314eb26114"
   v1.0.0:
     url: "https://github.com/alvistack/skopeo/releases/download/v1.0.0/skopeo-v1.0.0-linux-amd64"
     dest: "{{ ansible_user_dir }}/.ansible/tmp/skopeo-v1.0.0-linux-amd64"
