--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -18,10 +18,12 @@
   remote_user: root
   become: true
   tasks:
-    - include_role:
+    - name: include role
+      include_role:
         name: containers_common
       tags: containers_common
 
-    - include_role:
+    - name: include role
+      include_role:
         name: skopeo
       tags: skopeo
