--- a/vars/main.yml
+++ b/vars/main.yml
@@ -14,6 +14,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+_skopeo_version:
+  "v1.3": "v1.3.0"
+  "v1.2": "v1.2.3"
+
 _skopeo_download:
   "v1.3.0":
     url: "http://github.com/alvistack/containers-skopeo/releases/download/v1.3.0/skopeo-v1.3.0-linux-amd64"
