Split `alvistack/ansible-role-fuse_overlayfs`

--- a/ansible-galaxy-requirements.yml
+++ b/ansible-galaxy-requirements.yml
@@ -32,6 +32,10 @@ collections:
     version: ">=0.0.0,<1.0.0"
 
 roles:
+  - name: fuse_overlayfs
+    src: https://github.com/alvistack/ansible-role-fuse_overlayfs
+    version: develop
+
   - name: containers_common
     src: https://github.com/alvistack/ansible-role-containers_common
     version: develop
