--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -15,7 +15,7 @@
 # limitations under the License.
 
 # Skopeo release.
-skopeo_release: "v1.3"
+skopeo_release: "1.3"
 
 # Skopeo version.
 skopeo_version: "{{ _skopeo_version[skopeo_release] }}"
