--- a/vars/suse.yml
+++ b/vars/suse.yml
@@ -15,10 +15,9 @@
 # limitations under the License.
 
 _zypper_repository:
-  - name: "Virtualization:containers"
-    repo: "https://download.opensuse.org/repositories/Virtualization:/containers/openSUSE_Tumbleweed"
+  - name: "home:alvistack"
+    repo: "http://download.opensuse.org/repositories/home:/alvistack/openSUSE_Tumbleweed"
     state: "present"
 
 _zypper:
   - { state: "latest", name: "skopeo" }
-  - { state: "latest", name: "skopeo-bash-completion" }
