--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -19,21 +19,21 @@
   become: true
   tasks:
     - name: include role
-      include_role:
+      ansible.builtin.include_role:
         name: runc
       tags: runc
 
     - name: include role
-      include_role:
+      ansible.builtin.include_role:
         name: crun
       tags: crun
 
     - name: include role
-      include_role:
+      ansible.builtin.include_role:
         name: containers_common
       tags: containers_common
 
     - name: include role
-      include_role:
+      ansible.builtin.include_role:
         name: skopeo
       tags: skopeo
