--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -20,20 +20,20 @@
   tasks:
     - name: include role
       ansible.builtin.include_role:
-        name: runc
-      tags: runc
+        name: alvistack.runc
+      tags: alvistack.runc
 
     - name: include role
       ansible.builtin.include_role:
-        name: crun
-      tags: crun
+        name: alvistack.crun
+      tags: alvistack.crun
 
     - name: include role
       ansible.builtin.include_role:
-        name: containers_common
-      tags: containers_common
+        name: alvistack.containers_common
+      tags: alvistack.containers_common
 
     - name: include role
       ansible.builtin.include_role:
-        name: skopeo
-      tags: skopeo
+        name: alvistack.skopeo
+      tags: alvistack.skopeo
