https://github.com/ansible/ansible-lint/pull/2483

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -17,6 +17,7 @@
 galaxy_info:
   standalone: true
   role_name: skopeo
+  namespace: alvistack
   author: "Wong Hoi Sing Edison <hswong3i@pantarei-design.com>"
   description: Ansible Role for Skopeo Installation
   company: PantaRei Design
